--- a/specification/cognitiveservices/data-plane/AzureOpenAI/inference/preview/2023-08-01-preview/examples/extensions_chat_completions.json
+++ b/specification/cognitiveservices/data-plane/AzureOpenAI/inference/preview/2023-08-01-preview/examples/extensions_chat_completions.json
@@ -18,7 +18,7 @@
       ],
       "dataSources": [
         {
-          "type": "AzureCognitiveSearch",
+          "type": "azureChatExtensionType",
           "parameters": {
             "source_specific_parameter_1": "foo",
             "source_specific_parameter_2": {
