--- a/specification/cognitiveservices/OpenAI.Inference/examples/2023-08-01-preview/extensions_chat_completions.json
+++ b/specification/cognitiveservices/OpenAI.Inference/examples/2023-08-01-preview/extensions_chat_completions.json
@@ -20,11 +20,9 @@
         {
           "type": "azureChatExtensionType",
           "parameters": {
-            "source_specific_parameter_1": "foo",
-            "source_specific_parameter_2": {
-              "complex_types": "like this",
-              "are_supported": true
-            }
+            "endpoint": "{search endpoint}",
+            "key": "{search admin key}",
+            "indexName": "{index name}" 
           }
         }
       ]
