Apply suggestions from code review

--- a/specification/cognitiveservices/OpenAI.Inference/examples/2023-08-01-preview/extensions_chat_completions.json
+++ b/specification/cognitiveservices/OpenAI.Inference/examples/2023-08-01-preview/extensions_chat_completions.json
@@ -18,7 +18,7 @@
       ],
       "dataSources": [
         {
-          "type": "azureChatExtensionType",
+          "type": "AzureCognitiveSearch",
           "parameters": {
             "endpoint": "{search endpoint}",
             "key": "{search admin key}",
