--- a/specification/cognitiveservices/ContentSafety/0430/tspconfig.yaml
+++ b/specification/cognitiveservices/ContentSafety/0430/tspconfig.yaml
@@ -8,10 +8,9 @@ options:
     emitter-output-dir: "{project-root}/../"
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/contentsafety.json"
     azure-resource-provider-folder: "data-plane"
-    examples-directory: ./examples
+    examples-directory: examples
   "@azure-tools/typespec-python":
     package-dir: "azure-ai-contentsafety"
-    package-version: "1.0.0"
     package-name: "{package-dir}"
     package-mode: dataplane
   "@azure-tools/typespec-csharp":
@@ -19,13 +18,14 @@ options:
     namespace: "{package-dir}"
     clear-output-folder: true
     model-namespace: false
-  "@azure-tools/typespec-ts":
-    package-dir: "azure-ai-content-safety-rest"
-    packageDetails:
-      name: "@azure-rest/ai-content-safety"
-      version: "1.0.0"
-      description: "ContentSafety Service"
-  "@azure-tools/typespec-java":
-    package-dir: "azure-ai-contentsafety"
-    namespace: com.azure.ai.contentsafety
-    examples-directory: examples
+  # "@azure-tools/typespec-ts":
+  #   package-dir: "contentsafety-rest"
+  #   generateMetadata: true
+  #   generateTest: true
+  #   azureSdkForJs: true
+  #   packageDetails:
+  #     name: "@azure-rest/contentsafety-rest"
+  #     description: "ContentSafety Service"
+  # "@azure-tools/typespec-java":
+  #   package-dir: "contentsafety"
+  #   namespace: com.contentsafety
