--- a/specification/security/resource-manager/Microsoft.Security/preview/2022-12-01-preview/defenderForStorageSettings.json
+++ b/specification/security/resource-manager/Microsoft.Security/preview/2022-12-01-preview/defenderForStorageSettings.json
@@ -165,6 +165,11 @@
           "x-ms-client-flatten": true,
           "$ref": "#/definitions/OnUploadProperties"
         },
+        "scanResultsEventGridTopicResourceId":{
+          "type": "string",
+          "required": false,
+          "description": "Optional. Resouce id of an Event Grid Topic to send scan results to."
+        },
         "operationStatus": {
           "type": "object",
           "$ref": "#/definitions/OperationStatus",
