Updates API version in new specs and examples

--- a/specification/postgresqlhsc/resource-manager/Microsoft.DBforPostgreSQL/preview/2023-03-02-preview/examples/ConfigurationListByServer.json
+++ b/specification/postgresqlhsc/resource-manager/Microsoft.DBforPostgreSQL/preview/2023-03-02-preview/examples/ConfigurationListByServer.json
@@ -4,7 +4,7 @@
     "resourceGroupName": "TestResourceGroup",
     "clusterName": "testcluster",
     "serverName": "testserver",
-    "api-version": "2022-11-08"
+    "api-version": "2023-03-02-preview"
   },
   "responses": {
     "200": {
