--- a/specification/postgresqlhsc/resource-manager/Microsoft.DBforPostgreSQL/preview/2023-03-02-preview/examples/ConfigurationListByCluster.json
+++ b/specification/postgresqlhsc/resource-manager/Microsoft.DBforPostgreSQL/preview/2023-03-02-preview/examples/ConfigurationListByCluster.json
@@ -3,7 +3,7 @@
     "subscriptionId": "ffffffff-ffff-ffff-ffff-ffffffffffff",
     "resourceGroupName": "TestResourceGroup",
     "clusterName": "testcluster",
-    "api-version": "2022-11-08"
+    "api-version": "2023-03-02-preview"
   },
   "responses": {
     "200": {
