--- a/specification/schemaregistry/SchemaRegistry/tspconfig.yaml
+++ b/specification/schemaregistry/SchemaRegistry/tspconfig.yaml
@@ -9,7 +9,7 @@ emit:
 options:
   "@azure-tools/typespec-autorest":
     azure-resource-provider-folder: "data-plane"
-    emitter-output-dir: "{project-root}/../data-plane/Microsoft.EventHub/stable/2022-10"
+    emitter-output-dir: "{project-root}/../data-plane/Microsoft.EventHub/stable/2023-07-01"
     output-file: "SchemaRegistry.json"
     examples-directory: "examples"
   "@azure-tools/typespec-python":    
@@ -18,4 +18,5 @@ options:
     package-mode: dataplane
     package-version: 1.3.0b3
     emitter-output-dir: "{project-root}/{service-dir}/{package-name}"
+    basic-setup-py: false
 
