--- a/specification/eventgrid/Azure.Messaging.EventGrid/tspconfig.yaml
+++ b/specification/eventgrid/Azure.Messaging.EventGrid/tspconfig.yaml
@@ -9,7 +9,7 @@ emit: [
 options:
   "@azure-tools/typespec-autorest":
     examples-directory: examples
-    omit-unreachable-types: true
+    omit-unreachable-types: false
     output-file: EventGrid.json
     emitter-output-dir: "{project-root}/../data-plane/Microsoft.EventGrid/preview/2023-06-01-preview"
   "@azure-tools/typespec-python":
