--- a/specification/recoveryservicesdatareplication/resource-manager/Microsoft.DataReplication/preview/2021-02-16-preview/examples/EmailConfiguration_Create.json
+++ b/specification/recoveryservicesdatareplication/resource-manager/Microsoft.DataReplication/preview/2021-02-16-preview/examples/EmailConfiguration_Create.json
@@ -2,21 +2,21 @@
   "title": "Creates email configuration settings.",
   "operationId": "EmailConfiguration_Create",
   "parameters": {
-    "subscriptionId": "B745CADE-7A6B-4551-92A9-DF291AFB6FAE",
+    "subscriptionId": "930CEC23-4430-4513-B855-DBA237E2F3BF",
     "resourceGroupName": "rgrecoveryservicesdatareplication",
-    "vaultName": "l",
-    "emailConfigurationName": "DD",
+    "vaultName": "4",
+    "emailConfigurationName": "0",
     "api-version": "2021-02-16-preview",
     "body": {
       "properties": {
         "sendToOwners": true,
         "customEmailAddresses": [
-          "osutqdiotz"
+          "ketvbducyailcny"
         ],
-        "locale": "mjlhfcvrrtdld"
+        "locale": "vpnjxjvdqtebnucyxiyrjiko"
       },
       "tags": {
-        "key3236": "oece"
+        "key6763": "urnmiqiksxjgowb"
       }
     }
   },
@@ -26,23 +26,23 @@
         "properties": {
           "sendToOwners": true,
           "customEmailAddresses": [
-            "osutqdiotz"
+            "ketvbducyailcny"
           ],
-          "locale": "mjlhfcvrrtdld"
+          "locale": "vpnjxjvdqtebnucyxiyrjiko"
         },
-        "id": "pltvzvksnwcdlxymekx",
-        "name": "swzygs",
-        "type": "rytinviucwfrauexy",
+        "id": "bvbfy",
+        "name": "ywjplnjzaeu",
+        "type": "bkaq",
         "systemData": {
-          "createdBy": "ulvkkiokkqpspffpzrgfvgofvliz",
-          "createdByType": "zzeuyuuaze",
-          "createdAt": "2023-08-02T22:38:39.004Z",
-          "lastModifiedBy": "nlizcaruxowvdjspljihdqoadyjvq",
-          "lastModifiedByType": "nshxhzyuitledwpptnbcfsqbtyg",
-          "lastModifiedAt": "2023-08-02T22:38:39.004Z"
+          "createdBy": "ewufpudzcjrljhmmzhfnxoqdqwnya",
+          "createdByType": "zioqm",
+          "createdAt": "2023-08-25T00:28:53.022Z",
+          "lastModifiedBy": "rx",
+          "lastModifiedByType": "tqbvuqoakaaqij",
+          "lastModifiedAt": "2023-08-25T00:28:53.022Z"
         },
         "tags": {
-          "key3236": "oece"
+          "key6763": "urnmiqiksxjgowb"
         }
       }
     },
@@ -51,23 +51,23 @@
         "properties": {
           "sendToOwners": true,
           "customEmailAddresses": [
-            "osutqdiotz"
+            "ketvbducyailcny"
           ],
-          "locale": "mjlhfcvrrtdld"
+          "locale": "vpnjxjvdqtebnucyxiyrjiko"
         },
-        "id": "pltvzvksnwcdlxymekx",
-        "name": "swzygs",
-        "type": "rytinviucwfrauexy",
+        "id": "bvbfy",
+        "name": "ywjplnjzaeu",
+        "type": "bkaq",
         "systemData": {
-          "createdBy": "ulvkkiokkqpspffpzrgfvgofvliz",
-          "createdByType": "zzeuyuuaze",
-          "createdAt": "2023-08-02T22:38:39.004Z",
-          "lastModifiedBy": "nlizcaruxowvdjspljihdqoadyjvq",
-          "lastModifiedByType": "nshxhzyuitledwpptnbcfsqbtyg",
-          "lastModifiedAt": "2023-08-02T22:38:39.004Z"
+          "createdBy": "ewufpudzcjrljhmmzhfnxoqdqwnya",
+          "createdByType": "zioqm",
+          "createdAt": "2023-08-25T00:28:53.022Z",
+          "lastModifiedBy": "rx",
+          "lastModifiedByType": "tqbvuqoakaaqij",
+          "lastModifiedAt": "2023-08-25T00:28:53.022Z"
         },
         "tags": {
-          "key3236": "oece"
+          "key6763": "urnmiqiksxjgowb"
         }
       }
     }
