--- a/specification/vi/resource-manager/Microsoft.VideoIndexer/stable/2024-01-01/examples/ViGenerateAccessToken/ViGenerateProjectContributerAccessToken.json
+++ b/specification/vi/resource-manager/Microsoft.VideoIndexer/stable/2024-01-01/examples/ViGenerateAccessToken/ViGenerateProjectContributerAccessToken.json
@@ -1,11 +1,13 @@
 {
   "parameters": {
-    "accountName": "contosto-azurevideoindexer",
-    "resourceGroupName": "contosto-azurevideoindexer-rg",
+    "accountName": "contosto-videoanalyzer",
+    "resourceGroupName": "contosto-videoanalyzer-rg",
     "api-version": "2023-09-01-preview",
     "subscriptionId": "b04775c3-63fa-40f3-9430-139d2e5522d3",
     "parameters": {
-      "scope": "Account"
+      "permissionType": "Contributor",
+      "scope": "Project",
+      "projectId": "07ec9e38d4"
     }
   },
   "responses": {
