Adding the generated folder

--- a/specification/eventgrid/data-plane/Microsoft.EventGrid/preview/2023-09-01-preview/examples/release.json
+++ b/specification/eventgrid/data-plane/Microsoft.EventGrid/preview/2023-09-01-preview/examples/release.json
@@ -1,6 +1,6 @@
 {
   "operationId": "ReleaseCloudEvents",
-  "title": "Release Cloud Event",
+  "title": "Release Cloud Event with an optional delay.",
   "parameters": {
     "endpoint": "myNamespaceName.westus-1.eventgrid.azure.net",
     "topicName": "myTopic",
