Add example ref

--- a/specification/eventgrid/data-plane/Microsoft.AppConfiguration/stable/2018-01-01/AppConfiguration.json
+++ b/specification/eventgrid/data-plane/Microsoft.AppConfiguration/stable/2018-01-01/AppConfiguration.json
@@ -67,6 +67,14 @@
           "description": "The sync token representing the server state after the event.",
           "type": "string"
         }
+      },
+      "x-ms-examples": {
+        "snapshotCreatedCloudEventsSchema": {
+          "$ref": "./examples/cloud-events-schema/snapshot_created.json"
+        },
+        "snapshotCreatedEventGridSchema": {
+          "$ref": "./examples/event-grid-schema/snapshot_created.json"
+        }
       }
     },
     "AppConfigurationKSnapshotModifiedEventData": {
@@ -84,6 +92,14 @@
         "syncToken": {
           "description": "The sync token representing the server state after the event.",
           "type": "string"
+        }
+      },
+      "x-ms-examples": {
+        "snapshotModifiedCloudEventsSchema": {
+          "$ref": "./examples/cloud-events-schema/snapshot_modified.json"
+        },
+        "snapshotModifiedEventGridSchema": {
+          "$ref": "./examples/event-grid-schema/snapshot_modified.json"
         }
       }
     }
