--- a/specification/eventgrid/data-plane/Microsoft.AppConfiguration/stable/2018-01-01/AppConfiguration.json
+++ b/specification/eventgrid/data-plane/Microsoft.AppConfiguration/stable/2018-01-01/AppConfiguration.json
@@ -51,20 +51,31 @@
         }
       }
     },
-    "AppConfigurationSnapshotCreatedEventData": {
-      "description": "Schema of the Data property of an EventGridEvent for a Microsoft.AppConfiguration.SnapshotCreated event.",
+    "AppConfigurationSnapshotBaseProperties": {
+      "description": "Schema of common properties of snapshot events",
       "type": "object",
       "properties": {
-        "name": {
-          "description": "The name of snapshot that was created.",
-          "type": "string"
-        },
         "etag": {
           "description": "The etag representing the new state of the snapshot.",
           "type": "string"
         },
         "syncToken": {
           "description": "The sync token representing the server state after the event.",
+          "type": "string"
+        }
+      }
+    },
+    "AppConfigurationSnapshotCreatedEventData": {
+      "description": "Schema of the Data property of an EventGridEvent for a Microsoft.AppConfiguration.SnapshotCreated event.",
+      "type": "object",
+      "allOf": [
+        {
+          "$ref": "#/definitions/AppConfigurationSnapshotBaseProperties"
+        }
+      ],
+      "properties": {
+        "name": {
+          "description": "The name of snapshot that was created.",
           "type": "string"
         }
       },
@@ -80,17 +91,14 @@
     "AppConfigurationSnapshotModifiedEventData": {
       "description": "Schema of the Data property of an EventGridEvent for a Microsoft.AppConfiguration.SnapshotModified event.",
       "type": "object",
+      "allOf": [
+        {
+          "$ref": "#/definitions/AppConfigurationSnapshotBaseProperties"
+        }
+      ],
       "properties": {
         "name": {
           "description": "The name of snapshot that was modified.",
-          "type": "string"
-        },
-        "etag": {
-          "description": "The etag representing the new state of the snapshot.",
-          "type": "string"
-        },
-        "syncToken": {
-          "description": "The sync token representing the server state after the event.",
           "type": "string"
         }
       },
