--- a/specification/loadtestservice/LoadTestService/tspconfig.yaml
+++ b/specification/loadtestservice/LoadTestService/tspconfig.yaml
@@ -2,11 +2,11 @@ parameters:
   service-dir:
     default: "sdk/loadtesting"
 emit:
-  # - "@azure-tools/typespec-autorest"
+  - "@azure-tools/typespec-autorest"
   # Uncomment this line and add "@azure-tools/typespec-python" to your package.json to generate Python code
-  - "@azure-tools/typespec-python"
-  - "@azure-tools/typespec-ts"
-  - "@azure-tools/typespec-csharp"
+  #- "@azure-tools/typespec-python"
+  #- "@azure-tools/typespec-ts"
+  #- "@azure-tools/typespec-csharp"
   # Uncomment this line and add "@azure-tools/typespec-java" to your package.json to generate Java code
   # "@azure-tools/typespec-java": true
   # Uncomment this line and add "@azure-tools/typespec-csharp" to your package.json to generate C# code
