Add totalElements to DiscoGroups, DiscoTemplates, and SavedFilters List traits

--- a/specification/riskiq/data-plane/Microsoft.Easm/preview/2023-03-01-preview/easm.json
+++ b/specification/riskiq/data-plane/Microsoft.Easm/preview/2023-03-01-preview/easm.json
@@ -4756,6 +4756,11 @@
           "type": "string",
           "format": "uri",
           "description": "The link to the next page of items"
+        },
+        "totalElements": {
+          "type": "integer",
+          "format": "int64",
+          "description": "The total number of items available in the full result set."
         }
       },
       "required": [
@@ -4777,6 +4782,11 @@
           "type": "string",
           "format": "uri",
           "description": "The link to the next page of items"
+        },
+        "totalElements": {
+          "type": "integer",
+          "format": "int64",
+          "description": "The total number of items available in the full result set."
         }
       },
       "required": [
@@ -4798,6 +4808,11 @@
           "type": "string",
           "format": "uri",
           "description": "The link to the next page of items"
+        },
+        "totalElements": {
+          "type": "integer",
+          "format": "int64",
+          "description": "The total number of items available in the full result set."
         }
       },
       "required": [
