--- a/specification/eventgrid/data-plane/Microsoft.AppConfiguration/stable/2018-01-01/AppConfiguration.json
+++ b/specification/eventgrid/data-plane/Microsoft.AppConfiguration/stable/2018-01-01/AppConfiguration.json
@@ -51,12 +51,12 @@
         }
       }
     },
-    "AppConfigurationSnapshotCreatedEventData": {
-      "description": "Schema of the Data property of an EventGridEvent for a Microsoft.AppConfiguration.SnapshotCreated event.",
+    "AppConfigurationSnapshotEventData": {
+      "description": "Schema of common properties of snapshot events",
       "type": "object",
       "properties": {
         "name": {
-          "description": "The name of snapshot that was created.",
+          "description": "The name of snapshot.",
           "type": "string"
         },
         "etag": {
@@ -67,7 +67,16 @@
           "description": "The sync token representing the server state after the event.",
           "type": "string"
         }
-      },
+      }
+    },
+    "AppConfigurationSnapshotCreatedEventData": {
+      "description": "Schema of the Data property of an EventGridEvent for a Microsoft.AppConfiguration.SnapshotCreated event.",
+      "type": "object",
+      "allOf": [
+        {
+          "$ref": "#/definitions/AppConfigurationSnapshotEventData"
+        }
+      ],
       "x-ms-examples": {
         "snapshotCreatedCloudEventsSchema": {
           "$ref": "./examples/cloud-events-schema/snapshot_created.json"
@@ -80,20 +89,11 @@
     "AppConfigurationSnapshotModifiedEventData": {
       "description": "Schema of the Data property of an EventGridEvent for a Microsoft.AppConfiguration.SnapshotModified event.",
       "type": "object",
-      "properties": {
-        "name": {
-          "description": "The name of snapshot that was modified.",
-          "type": "string"
-        },
-        "etag": {
-          "description": "The etag representing the new state of the snapshot.",
-          "type": "string"
-        },
-        "syncToken": {
-          "description": "The sync token representing the server state after the event.",
-          "type": "string"
+      "allOf": [
+        {
+          "$ref": "#/definitions/AppConfigurationSnapshotEventData"
         }
-      },
+      ],
       "x-ms-examples": {
         "snapshotModifiedCloudEventsSchema": {
           "$ref": "./examples/cloud-events-schema/snapshot_modified.json"
