addressed pr review comments

--- a/specification/workloads/resource-manager/Microsoft.Workloads/SAPVirtualInstance/preview/2023-10-01-preview/examples/sapapplicationinstances/SAPApplicationServerInstances_StopInstance_WithInfraOperations.json
+++ b/specification/workloads/resource-manager/Microsoft.Workloads/SAPVirtualInstance/preview/2023-10-01-preview/examples/sapapplicationinstances/SAPApplicationServerInstances_StopInstance_WithInfraOperations.json
@@ -7,7 +7,7 @@
     "api-version": "2023-10-01-preview",
     "body": {
       "softStopTimeoutSeconds": 0,
-      "infrastructureOperation": true
+      "deallocateVm": true
     }
   },
   "responses": {
