--- a/specification/workloads/resource-manager/Microsoft.Workloads/SAPVirtualInstance/preview/2023-10-01-preview/examples/sapapplicationinstances/SAPApplicationServerInstances_StartInstance_WithInfraOperations.json
+++ b/specification/workloads/resource-manager/Microsoft.Workloads/SAPVirtualInstance/preview/2023-10-01-preview/examples/sapapplicationinstances/SAPApplicationServerInstances_StartInstance_WithInfraOperations.json
@@ -6,7 +6,7 @@
     "applicationInstanceName": "app01",
     "api-version": "2023-10-01-preview",
     "body": {
-      "infrastructureOperation": true
+      "startVm": true
     }
   },
   "responses": {
