--- a/specification/devcenter/resource-manager/Microsoft.DevCenter/preview/2023-09-01-preview/examples/ProjectEnvironmentTypes_Patch.json
+++ b/specification/devcenter/resource-manager/Microsoft.DevCenter/preview/2023-09-01-preview/examples/ProjectEnvironmentTypes_Patch.json
@@ -38,6 +38,7 @@
           "deploymentTargetId": "/subscriptions/00000000-0000-0000-0000-000000000000",
           "status": "Enabled",
           "provisioningState": "Succeeded",
+          "environmentCount": 1,
           "creatorRoleAssignment": {
             "roles": {
               "4cbf0b6c-e750-441c-98a7-10da8387e4d6": {
