--- a/specification/devcenter/resource-manager/Microsoft.DevCenter/preview/2023-09-01-preview/examples/ProjectEnvironmentTypes_Put.json
+++ b/specification/devcenter/resource-manager/Microsoft.DevCenter/preview/2023-09-01-preview/examples/ProjectEnvironmentTypes_Put.json
@@ -40,9 +40,11 @@
         "name": "DevTest",
         "type": "Microsoft.DevCenter/projects/environmentTypes",
         "properties": {
+          "displayName": "DevTest",
           "deploymentTargetId": "/subscriptions/00000000-0000-0000-0000-000000000000",
           "status": "Enabled",
           "provisioningState": "Succeeded",
+          "environmentCount": 0,
           "creatorRoleAssignment": {
             "roles": {
               "4cbf0b6c-e750-441c-98a7-10da8387e4d6": {
@@ -71,6 +73,7 @@
           "lastModifiedAt": "2020-11-18T18:24:24.818Z"
         },
         "tags": {
+          "hidden-title": "Dev",
           "CostCenter": "RnD"
         },
         "identity": {
