--- a/specification/devcenter/resource-manager/Microsoft.DevCenter/preview/2023-09-01-preview/examples/Projects_Get.json
+++ b/specification/devcenter/resource-manager/Microsoft.DevCenter/preview/2023-09-01-preview/examples/Projects_Get.json
@@ -14,7 +14,8 @@
         "properties": {
           "devCenterId": "/subscriptions/0ac520ee-14c0-480f-b6c9-0a90c58ffff/resourceGroups/rg1/providers/Microsoft.DevCenter/devcenters/Contoso",
           "devCenterUri": "https://4c7c8922-78e9-4928-aa6f-75ba59355371-contoso.centralus.devcenter.azure.com",
-          "description": "This is my first project."
+          "description": "This is my first project.",
+          "displayName": "Dev"
         },
         "systemData": {
           "createdBy": "user1",
@@ -26,6 +27,7 @@
         },
         "location": "centralus",
         "tags": {
+          "hidden-title": "Dev",
           "CostCenter": "R&D"
         }
       }
