--- a/specification/devcenter/resource-manager/Microsoft.DevCenter/preview/2023-09-01-preview/examples/Projects_Put.json
+++ b/specification/devcenter/resource-manager/Microsoft.DevCenter/preview/2023-09-01-preview/examples/Projects_Put.json
@@ -7,7 +7,8 @@
     "body": {
       "properties": {
         "devCenterId": "/subscriptions/0ac520ee-14c0-480f-b6c9-0a90c58ffff/resourceGroups/rg1/providers/Microsoft.DevCenter/devcenters/Contoso",
-        "description": "This is my first project."
+        "description": "This is my first project.",
+        "displayName": "Dev"
       },
       "location": "centralus",
       "tags": {
@@ -37,6 +38,7 @@
         },
         "location": "centralus",
         "tags": {
+          "hidden-title": "Dev",
           "CostCenter": "R&D"
         }
       }
@@ -61,6 +63,7 @@
         },
         "location": "centralus",
         "tags": {
+          "hidden-title": "Dev",
           "CostCenter": "R&D"
         }
       }
