--- a/specification/devcenter/resource-manager/Microsoft.DevCenter/preview/2023-09-01-preview/examples/Projects_Patch.json
+++ b/specification/devcenter/resource-manager/Microsoft.DevCenter/preview/2023-09-01-preview/examples/Projects_Patch.json
@@ -6,7 +6,8 @@
     "projectName": "DevProject",
     "body": {
       "properties": {
-        "description": "This is my first project."
+        "description": "This is my first project.",
+        "displayName": "Dev"
       },
       "tags": {
         "CostCenter": "R&D"
@@ -23,6 +24,7 @@
           "devCenterId": "/subscriptions/0ac520ee-14c0-480f-b6c9-0a90c58ffff/resourceGroups/rg1/providers/Microsoft.DevCenter/devcenters/Contoso",
           "devCenterUri": "https://4c7c8922-78e9-4928-aa6f-75ba59355371-contoso.centralus.devcenter.azure.com",
           "description": "This is my first project. Very exciting.",
+          "displayName": "Dev",
           "provisioningState": "Succeeded"
         },
         "systemData": {
@@ -35,6 +37,7 @@
         },
         "location": "centralus",
         "tags": {
+          "displayName": "Dev",
           "CostCenter": "R&D"
         }
       }
