--- a/specification/eventgrid/data-plane/Microsoft.AppConfiguration/stable/2018-01-01/AppConfiguration.json
+++ b/specification/eventgrid/data-plane/Microsoft.AppConfiguration/stable/2018-01-01/AppConfiguration.json
@@ -55,7 +55,7 @@
       "description": "Schema of common properties of snapshot events",
       "properties": {
         "name": {
-          "description": "The name of snapshot.",
+          "description": "The name of the snapshot.",
           "type": "string"
         },
         "etag": {
