--- a/specification/eventgrid/data-plane/Microsoft.AppConfiguration/stable/2018-01-01/AppConfiguration.json
+++ b/specification/eventgrid/data-plane/Microsoft.AppConfiguration/stable/2018-01-01/AppConfiguration.json
@@ -53,6 +53,7 @@
     },
     "AppConfigurationSnapshotEventData": {
       "description": "Schema of common properties of snapshot events",
+      "type": "object",
       "properties": {
         "name": {
           "description": "The name of the snapshot.",
