--- a/specification/migrate/resource-manager/Microsoft.Migrate/MigrateProjects/stable/2020-05-01/examples/migrateProject_Get.json
+++ b/specification/migrate/resource-manager/Microsoft.Migrate/MigrateProjects/stable/2020-05-01/examples/migrateProject_Get.json
@@ -1,56 +1,56 @@
 {
   "parameters": {
-    "api-version": "2020-05-01",
-    "migrateProjectName": "proj90",
+    "subscriptionId": "4bd2aa0f-2bd2-4d67-91a8-5a4533d58600",
     "resourceGroupName": "pajindTest1",
-    "subscriptionId": "4bd2aa0f-2bd2-4d67-91a8-5a4533d58600"
+    "migrateProjectName": "proj90",
+    "api-version": "2020-05-01"
   },
   "responses": {
     "200": {
       "body": {
-        "eTag": "\"0000e223-0000-1800-0000-611959540000\"",
         "id": "/subscriptions/4bd2aa0f-2bd2-4d67-91a8-5a4533d58600/resourceGroups/pajindTest1/providers/Microsoft.Migrate/MigrateProjects/proj90",
-        "location": "eastasia",
         "name": "proj90",
+        "type": "Microsoft.Migrate/MigrateProjects",
+        "eTag": "\"0000e223-0000-1800-0000-611959540000\"",
+        "location": "eastasia",
         "properties": {
-          "lastSummaryRefreshedTime": "2021-08-15T18:13:29.5924045Z",
-          "privateEndpointConnections": [],
+          "utilityStorageAccountId": null,
           "publicNetworkAccess": "Enabled",
-          "refreshSummaryState": "Completed",
+          "privateEndpointConnections": [],
           "registeredTools": [],
           "serviceEndpoint": "https://68495fbe-86cc-484e-9427-0f529acf9641-isv.ea.hub.privatelink.prod.migration.windowsazure.com/resources/68495fbe-86cc-484e-9427-0f529acf9641",
           "summary": {
-            "databases": {
-              "extendedSummary": {},
-              "instanceType": "Databases",
-              "lastSummaryRefreshedTime": "2021-08-15T18:13:29.5924045Z",
-              "refreshSummaryState": "Completed"
-            },
-            "desktopVirtualization": {
-              "extendedSummary": {},
-              "instanceType": "DesktopVirtualization",
-              "lastSummaryRefreshedTime": "2021-08-15T18:13:29.5924045Z",
-              "refreshSummaryState": "Completed"
-            },
             "servers": {
+              "instanceType": "Servers",
+              "refreshSummaryState": "Completed",
+              "lastSummaryRefreshedTime": "2021-08-15T18:13:29.5924045Z",
               "extendedSummary": {
                 "microsoftDiscoveredCount": "0",
                 "microsoftMachinesCount": "0"
-              },
-              "instanceType": "Servers",
+              }
+            },
+            "databases": {
+              "instanceType": "Databases",
+              "refreshSummaryState": "Completed",
               "lastSummaryRefreshedTime": "2021-08-15T18:13:29.5924045Z",
-              "refreshSummaryState": "Completed"
+              "extendedSummary": {}
             },
             "webApplications": {
-              "extendedSummary": {},
               "instanceType": "WebApplications",
+              "refreshSummaryState": "Completed",
               "lastSummaryRefreshedTime": "2021-08-15T18:14:12.5492031Z",
-              "refreshSummaryState": "Completed"
+              "extendedSummary": {}
+            },
+            "desktopVirtualization": {
+              "instanceType": "DesktopVirtualization",
+              "refreshSummaryState": "Completed",
+              "lastSummaryRefreshedTime": "2021-08-15T18:13:29.5924045Z",
+              "extendedSummary": {}
             }
           },
-          "utilityStorageAccountId": null
-        },
-        "type": "Microsoft.Migrate/MigrateProjects"
+          "lastSummaryRefreshedTime": "2021-08-15T18:13:29.5924045Z",
+          "refreshSummaryState": "Completed"
+        }
       }
     }
   }
