--- a/specification/migrate/resource-manager/Microsoft.Migrate/MigrateProjects/stable/2020-05-01/examples/migrateProject_Delete.json
+++ b/specification/migrate/resource-manager/Microsoft.Migrate/MigrateProjects/stable/2020-05-01/examples/migrateProject_Delete.json
@@ -1,9 +1,9 @@
 {
   "parameters": {
-    "api-version": "2020-05-01",
-    "migrateProjectName": "proj90",
+    "subscriptionId": "4bd2aa0f-2bd2-4d67-91a8-5a4533d58600",
     "resourceGroupName": "pajindTest1",
-    "subscriptionId": "4bd2aa0f-2bd2-4d67-91a8-5a4533d58600"
+    "migrateProjectName": "proj90",
+    "api-version": "2020-05-01"
   },
   "responses": {
     "200": {},
