--- a/specification/migrate/resource-manager/Microsoft.Migrate/MigrateProjects/stable/2023-01-01/examples/Projects_ListBySubscription_MaximumSet_Gen.json
+++ b/specification/migrate/resource-manager/Microsoft.Migrate/MigrateProjects/stable/2023-01-01/examples/Projects_ListBySubscription_MaximumSet_Gen.json
@@ -45,7 +45,9 @@
               ],
               "publicNetworkAccess": "NotSpecified",
               "refreshSummaryState": "Started",
-              "registeredTools": ["ServerDiscovery"],
+              "registeredTools": [
+                "ServerDiscovery"
+              ],
               "serviceEndpoint": "awndnxpkgqn",
               "summary": {
                 "key734": {
