--- a/specification/playwrighttesting/PlaywrightTesting.Management/tspconfig.yaml
+++ b/specification/playwrighttesting/PlaywrightTesting.Management/tspconfig.yaml
@@ -1,5 +1,6 @@
 emit:
   - "@azure-tools/typespec-autorest"
+#  - "@azure-tools/typespec-providerhub-controller"
 parameters:
   "service-directory-name":
     default: "playwrighttesting"
@@ -10,3 +11,7 @@ options:
     examples-directory: "{project-root}/examples"
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/playwrighttesting.json"
     omit-unreachable-types: true
+#  "@azure-tools/typespec-providerhub-controller":
+#    azure-resource-provider-folder: "resource-manager"
+#    emitter-output-dir: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/generated"
+#    code-kind: model
