remove default on unitpermission in volumePatchProperties

--- a/specification/netapp/resource-manager/Microsoft.NetApp/stable/2023-05-01/netapp.json
+++ b/specification/netapp/resource-manager/Microsoft.NetApp/stable/2023-05-01/netapp.json
@@ -5477,8 +5477,7 @@
           "minLength": 4,
           "maxLength": 4,
           "x-nullable": true,
-          "example": "0770",
-          "default": "0770"
+          "example": "0770"
         },
         "cloneProgress": {
           "description": "When a volume is being restored from another volume's snapshot, will show the percentage completion of this cloning process. When this value is empty/null there is no cloning process currently happening on this volume. This value will update every 5 minutes during cloning.",
