--- a/specification/loadtestservice/LoadTestService/tsp-output/@azure-tools/typespec-autorest/2022-11-01/examples/CreateOrUpdateTestAppComponents.json
+++ b/specification/loadtestservice/LoadTestService/tsp-output/@azure-tools/typespec-autorest/2022-11-01/examples/CreateOrUpdateTestAppComponents.json
@@ -1,7 +1,7 @@
 {
   "parameters": {
     "testId": "ee843bd9-a6d4-4364-a45c-427a03c39fa7",
-    "api-version": "2023-04-01-preview",
+    "api-version": "2022-11-01",
     "body": {
       "components": {
         "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/samplerg/providers/microsoft.insights/components/appcomponentresource": {
