--- a/specification/loadtestservice/LoadTestService/tsp-output/@azure-tools/typespec-autorest/2022-11-01/examples/ListTestRunAppComponents.json
+++ b/specification/loadtestservice/LoadTestService/tsp-output/@azure-tools/typespec-autorest/2022-11-01/examples/ListTestRunAppComponents.json
@@ -1,7 +1,7 @@
 {
   "parameters": {
     "testRunId": "ee843bd9-a6d4-4364-a45c-427a03c39fa7",
-    "api-version": "2023-04-01-preview"
+    "api-version": "2022-11-01"
   },
   "responses": {
     "200": {
