--- a/specification/loadtestservice/LoadTestService/tsp-output/@azure-tools/typespec-autorest/2022-11-01/examples/ListTestRunServerMetricsConfig.json
+++ b/specification/loadtestservice/LoadTestService/tsp-output/@azure-tools/typespec-autorest/2022-11-01/examples/ListTestRunServerMetricsConfig.json
@@ -1,7 +1,7 @@
 {
   "parameters": {
     "testRunId": "12345678-1234-1234-1234-123456789012",
-    "api-version": "2023-04-01-preview"
+    "api-version": "2022-11-01"
   },
   "responses": {
     "200": {
