--- a/specification/network/resource-manager/Microsoft.Network/preview/2023-06-01-preview/networkManagerSecurityAdminConfiguration.json
+++ b/specification/network/resource-manager/Microsoft.Network/preview/2023-06-01-preview/networkManagerSecurityAdminConfiguration.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "title": "SecurityAdminConfiguration",
-    "version": "2023-05-01"
+    "version": "2023-06-01-preview"
   },
   "host": "management.azure.com",
   "schemes": [
