--- a/specification/network/resource-manager/Microsoft.Network/preview/2023-06-01-preview/examples/GetApplicationGatewayWafDynamicManifestsDefault.json
+++ b/specification/network/resource-manager/Microsoft.Network/preview/2023-06-01-preview/examples/GetApplicationGatewayWafDynamicManifestsDefault.json
@@ -1,7 +1,7 @@
 {
   "parameters": {
     "location": "westus",
-    "api-version": "2021-05-01",
+    "api-version": "2023-06-01-preview",
     "subscriptionId": "subid"
   },
   "responses": {
