CVM TDX and Custom UEFI Keys (#25661)
* changes

* prettier

--- a/specification/compute/resource-manager/Microsoft.Compute/GalleryRP/stable/2022-08-03/examples/galleryExamples/GalleryImageVersion_Create_WithVHD_UefiSettings.json
+++ b/specification/compute/resource-manager/Microsoft.Compute/GalleryRP/stable/2022-08-03/examples/galleryExamples/GalleryImageVersion_Create_WithVHD_UefiSettings.json
@@ -56,6 +56,39 @@
         },
         "safetyProfile": {
           "allowDeletionOfReplicatedLocations": false
+        },
+        "securityProfile": {
+          "uefiSettings": {
+            "signatureTemplateNames": [
+              "MicrosoftUefiCertificateAuthorityTemplate"
+            ],
+            "additionalSignatures": {
+              "kek": [
+                {
+                  "type": "sha256",
+                  "value": [
+                    "<sha256 value>"
+                  ]
+                }
+              ],
+              "db": [
+                {
+                  "type": "x509",
+                  "value": [
+                    "<x509 value>"
+                  ]
+                }
+              ],
+              "dbx": [
+                {
+                  "type": "x509",
+                  "value": [
+                    "<x509 value>"
+                  ]
+                }
+              ]
+            }
+          }
         }
       }
     }
@@ -123,6 +156,39 @@
                 "details": "This is the policy violation details."
               }
             ]
+          },
+          "securityProfile": {
+            "uefiSettings": {
+              "signatureTemplateNames": [
+                "MicrosoftUefiCertificateAuthorityTemplate"
+              ],
+              "additionalSignatures": {
+                "kek": [
+                  {
+                    "type": "sha256",
+                    "value": [
+                      "<sha256 value>"
+                    ]
+                  }
+                ],
+                "db": [
+                  {
+                    "type": "x509",
+                    "value": [
+                      "<x509 value>"
+                    ]
+                  }
+                ],
+                "dbx": [
+                  {
+                    "type": "x509",
+                    "value": [
+                      "<x509 value>"
+                    ]
+                  }
+                ]
+              }
+            }
           },
           "provisioningState": "Updating"
         },
@@ -193,6 +259,39 @@
               }
             ]
           },
+          "securityProfile": {
+            "uefiSettings": {
+              "signatureTemplateNames": [
+                "MicrosoftUefiCertificateAuthorityTemplate"
+              ],
+              "additionalSignatures": {
+                "kek": [
+                  {
+                    "type": "sha256",
+                    "value": [
+                      "<sha256 value>"
+                    ]
+                  }
+                ],
+                "db": [
+                  {
+                    "type": "x509",
+                    "value": [
+                      "<x509 value>"
+                    ]
+                  }
+                ],
+                "dbx": [
+                  {
+                    "type": "x509",
+                    "value": [
+                      "<x509 value>"
+                    ]
+                  }
+                ]
+              }
+            }
+          },
           "provisioningState": "Creating"
         },
         "location": "West US",
@@ -261,6 +360,39 @@
                 "details": "This is the policy violation details."
               }
             ]
+          },
+          "securityProfile": {
+            "uefiSettings": {
+              "signatureTemplateNames": [
+                "MicrosoftUefiCertificateAuthorityTemplate"
+              ],
+              "additionalSignatures": {
+                "kek": [
+                  {
+                    "type": "sha256",
+                    "value": [
+                      "<sha256 value>"
+                    ]
+                  }
+                ],
+                "db": [
+                  {
+                    "type": "x509",
+                    "value": [
+                      "<x509 value>"
+                    ]
+                  }
+                ],
+                "dbx": [
+                  {
+                    "type": "x509",
+                    "value": [
+                      "<x509 value>"
+                    ]
+                  }
+                ]
+              }
+            }
           },
           "provisioningState": "Updating"
         },
