Format as arm-id

--- a/specification/netapp/resource-manager/Microsoft.NetApp/stable/2023-05-01/netapp.json
+++ b/specification/netapp/resource-manager/Microsoft.NetApp/stable/2023-05-01/netapp.json
@@ -7381,7 +7381,14 @@
       "type": "array",
       "items": {
         "title": "Resource Id of volume",
-        "type": "string"
+        "type": "string",
+        "x-ms-arm-id-details": {
+          "allowedResources": [
+            {
+              "type": "Microsoft.NetApp/netAppAccounts/capacityPools/volumes"
+            }
+          ]
+        }
       }
     },
     "subnetId": {
