--- a/specification/cognitiveservices/OpenAI.Inference/tspconfig.yaml
+++ b/specification/cognitiveservices/OpenAI.Inference/tspconfig.yaml
@@ -24,7 +24,7 @@ options:
     enable-sync-stack: true
     generate-tests: false
     custom-types-subpackage: "implementation.models"
-    custom-types: "getAudioTranscriptionSimpleJson,getAudioTranscriptionVerboseJson,getAudioTranscriptionPlainText,getAudioTranscriptionSrt,getAudioTranscriptionVtt,getAudioTranslationSimpleJson,getAudioTranslationVerboseJson,getAudioTranslationPlainText,getAudioTranslationSrt,getAudioTranslationVtt,FunctionCallModelBase,FunctionCallPreset,FunctionCallPresetFunctionCallModel,FunctionNameFunctionCallModel"
+    custom-types: "AudioTranscriptionOptionsSimpleJson,AudioTranscriptionOptionsVerboseJson,AudioTranscriptionOptionsPlainText,AudioTranscriptionOptionsSrt,AudioTranscriptionOptionsVtt,AudioTranslationOptionsSimpleJson,AudioTranslationOptionsVerboseJson,AudioTranslationOptionsPlainText,AudioTranslationOptionsSrt,AudioTranslationOptionsVtt,FunctionCallModelBase,FunctionCallPreset,FunctionCallPresetFunctionCallModel,FunctionNameFunctionCallModel"
   "@azure-tools/typespec-ts":
     package-dir: "openai"
     generateMetadata: false
