Format as arm-id3

--- a/specification/netapp/resource-manager/Microsoft.NetApp/stable/2023-05-01/netapp.json
+++ b/specification/netapp/resource-manager/Microsoft.NetApp/stable/2023-05-01/netapp.json
@@ -7382,6 +7382,7 @@
       "items": {
         "title": "Resource Id of volume",
         "type": "string",
+        "format": "arm-id",
         "x-ms-arm-id-details": {
           "allowedResources": [
             {
