Addressed comments and added extra properties

--- a/specification/app/resource-manager/Microsoft.App/preview/2023-08-01-preview/examples/Patches_Apply.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2023-08-01-preview/examples/Patches_Apply.json
@@ -20,10 +20,13 @@
           "targetRevisionId": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg/providers/Microsoft.App/apps/test-app/revisions/test-app--jm3vvry",
           "provisioningState": "Succeeded",
           "patchApplyStatus": "Succeeded",
+          "createdTime": "2022-10-10T12:06:20.3421+00:00",
+          "updatedTime": "2022-10-10T12:06:20.3421+00:00",
           "patchDetails": [
             {
               "targetContainerName": "test-container",
               "targetImage": "testregistry.azurecr.io/test-image:latest",
+              "lastDetectionTime": "2022-10-10T12:06:19.5241+00:00",
               "detectionStatus": "Succeeded",
               "newImageName": "testregistry.azurecr.io/test-image:latest-patched-202210101206",
               "newLayer": {
@@ -56,10 +59,13 @@
           "targetRevisionId": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg/providers/Microsoft.App/apps/test-app/revisions/test-app--jm3vvry",
           "provisioningState": "Succeeded",
           "patchApplyStatus": "InProgress",
+          "createdTime": "2022-10-10T12:06:20.3421+00:00",
+          "updatedTime": "2022-10-10T12:06:20.3421+00:00",
           "patchDetails": [
             {
               "targetContainerName": "test-container",
               "targetImage": "testregistry.azurecr.io/test-image:latest",
+              "lastDetectionTime": "2022-10-10T12:06:19.5241+00:00",
               "detectionStatus": "Succeeded",
               "newImageName": "testregistry.azurecr.io/test-image:latest-patched-202210101206",
               "newLayer": {
